<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_water">
    <LinearLayout
        android:id="@+id/linear_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:src="@mipmap/aquarium"/>
        <TextView
            android:text="@string/home"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white"
        android:layout_alignBottom="@id/linear_home"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="75dp">
    </View>

    <LinearLayout
        android:id="@+id/ImageButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true">
        <ImageButton
            android:background="@color/blue_water"
            android:id="@+id/feeder_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="fitCenter"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:padding="10dp"
            android:src="@drawable/fish"/>
        <ImageButton
            android:background="@color/blue_water"
            android:id="@+id/schedule_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="fitCenter"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:padding="10dp"
            android:src="@drawable/calendar"/>
        <ImageButton
            android:background="@color/blue_water"
            android:id="@+id/fertilizers_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="fitCenter"
            android:padding="10dp"
            android:src="@drawable/sprout"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_titles"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_above="@+id/ImageButtons">
        <TextView
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="10dp"
            android:text="@string/Feeder"/>
        <TextView
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="10dp"
            android:text="@string/Schedule"/>
        <TextView
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/Fertilizers"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/temperature_display"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_below="@id/linear_home">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:src="@drawable/thermometer"/>
        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:textSize="60sp"
            android:textColor="@android:color/white"
            android:text="@string/temperature_constant"/>
    </LinearLayout>

    <View
        android:id="@+id/tempBottomLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white"
        android:layout_alignBottom="@id/temperature_display">
    </View>

    <View
        android:id="@+id/iconsTopLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white"
        android:layout_alignTop="@id/button_titles"
        android:layout_marginTop="10dp" >
    </View>

    <LinearLayout
        android:id="@+id/barGraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignTop="@id/tempBottomLine"
        android:layout_alignBottom="@+id/iconsTopLine"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp">
        <View
            android:id="@+id/firstPump"
            android:layout_width="80dp"
            android:layout_height="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="bottom"
            android:background="@color/pink_pump">
        </View>
        <View
            android:id="@+id/secondPump"
            android:layout_width="80dp"
            android:layout_height="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="bottom"
            android:background="@color/blue_pump">
        </View>
        <View
            android:id="@+id/thirdPump"
            android:layout_width="80dp"
            android:layout_height="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="bottom"
            android:background="@color/green_pump">
        </View>
        <View
            android:id="@+id/fourthPump"
            android:layout_width="80dp"
            android:layout_height="10dp"
            android:layout_gravity="bottom"
            android:background="@color/purple_pump">
        </View>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pumpLiquidLeft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignTop="@id/tempBottomLine">
        <TextView
            android:id="@+id/firstPumpText"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="5dp"
            android:text="@string/pumpstring_common"/>
        <TextView
            android:id="@+id/secondPumpText"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="5dp"
            android:text="@string/pumpstring_common"/>
        <TextView
            android:id="@+id/thirdPumpText"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="5dp"
            android:text="@string/pumpstring_common"/>
        <TextView
            android:id="@+id/fourthPumpText"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_marginTop="5dp"
            android:text="@string/pumpstring_common"/>

    </LinearLayout>

</RelativeLayout>

